<resources>
    <string name="app_name">TransportMe</string>
    <string name="app_name1">TransportMe</string>
    <string name="about_us">About Us</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="booking">BOOK SLTB BUS</string>
    <string name="service">BOOK PVT BUS</string>
    <string name="home">Home</string>
    <string name="experience">Experiences</string>
    <string name="kathabus">Katha Bus</string>
    <string name="contactus">Contact Us</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="text1">myine</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="start_h">Start Location</string>
    <string name="start">START LOCATION</string>
    <string name="destination">DESTINATION</string>
    <string name="destination_h">Destination</string>
    <string name="date_h">DATE</string>
    <string name="date">DATE</string>
    <string name="search_bus">SEARCH BUSES</string>
    <string name="sub_title1">RESERVE LONG DISTANCE BUSES </string>
    <string name="sub_title2">ACROSS SRI LANKA</string>
    <string name="heading1">BOOK YOUR TICKETS</string>
    <string name="heading2">WITH US !!!!</string>
    <string name="result">Results Are Not Available</string>

    <string name="title_activity_search_page">TRANSPORTME</string>
    <string name="title_activity_payment_page">PaymentPage</string>
    <string-array name="cities">
        <item>kurunegala</item>
        <item>kuruwita</item>
        <item>malabe</item>
        <item>mathale</item>
        <item>Trincomalle</item>
        <item>Ambalangda</item>
        <item>Jaffna</item>
        <item>Kandy</item>
        <item>Metro</item>
        <item>Galle</item>
        <item>Ampara</item>
        <item>Nittambuwa</item>
        <item>colombo</item>
        <item>Kiribathgoda</item>
        <item>pasyala</item>
        <item>polonnaruwa</item>
        <item>Anuradhapura</item>

        <item>Dehiwala</item>
        <item>Mount Lavinia</item>
        <item>Moratuwa</item>
        <item>Kotte</item>
        <item>Negombo</item>
        <item>Vavuniya</item>
        <item>Batticaloa</item>
        <item>Katunayake</item>
        <item>Dambulla</item>

    </string-array>
    <string name="title_activity_search_page2">SearchPage2</string>
    <string name="title_activity_public__payment_page">Public_PaymentPage</string>
    <string name="title_activity_about_us">AboutUs</string>

    <string name="requird">field is required</string>
    <string name="cno_val">enter valid card number</string>
    <string name="cvv_val">need 3 numbers</string>

    <string name="my_details">My Details</string>
    <string name="Name">NAME:</string>
    <string name="Name_h">Name</string>
    <string name="Mobile_No">MOBILE NO:</string>
    <string name="Mobile_No_h">Mobile no</string>
    <string name="Passport_NIC_No">PASSPORT/NIC NO:</string>
    <string name="Passport_NIC_No_h">Passport/NIC No</string>
    <string name="Email">EMAIL:</string>
    <string name="Email_h">Email</string>
    <string name="pay_now">PAY NOW</string>

    <string name="payment_details">Payment Details</string>
    <string name="card_no">CARD NUMBER:</string>
    <string name="card_no_h">Card Number</string>
    <string name="cvv">CVV NUMBER:</string>
    <string name="cvv_h">CVV Number</string>
    <string name="amount">AMOUNT:</string>

    <string name="check"> I agree to all terms and conditions</string>

    <string name="aboutus">About us</string>
    <string name="aboutus_h">Customer happiness is our business!</string>
    <string name="p1">You are the reason why we are here.BusSeat.lk is always striving hard to provide you a better pessenger experience with luxury bus booking online blended with cutting edge technology and Sri Lankan hospitality.</string>
    <string name="p2">BusSeat.lk is Sri Lanka\'s first ever booking and reservation service provider for public passenger transport sector with a fully automated multi-platform booking engine complete with bus schedule.Sri Lanka is a country that thrives on public transport.And we believe that our innovative solutions can create a positive impact on all Sri Lankan passengers and commuters,simply eliminating their non-value adding waiting-time which can be spen in a more productive and efficient way from now on. </string>
    <string name="title_activity_booking_page">BookingPage</string>
    <string name="title_activity_chat_page">ChatPage</string>


    <string name="chat_name">Name</string>
    <string name="chat_email">Email</string>
    <string name="chat_phone">Phone</string>
    <string name="message">Message</string>
    <string name="chattext1">Don\'t be a stranger</string>
    <string name="chattext2">Feel free to get in touch with us.</string>
    <string name="chattext3">Just say hello.</string>
    <string name="chatbutton">Start Chatting</string>
    <string name="title_activity_booking_page2">BookingPage2</string>
    <string name="title_activity_view_seats__p">ViewSeats_P</string>
    <string name="title_activity_view_seats__s">ViewSeats_S</string>
    <string name="title_activity_chat_list">ChatList</string>


</resources>
