<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/experience" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_directions_bus_black_24dp"
            android:title="@string/kathabus" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_perm_phone_msg_black_24dp"
            android:title="@string/contactus" />
        <item
            android:id="@+id/nav_manage1"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/aboutus" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />

        </menu>
    </item>

</menu>
